--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -9,6 +9,7 @@ env:
   TF_VAR_github_client_id: ${{ secrets.TF_VAR_GITHUB_CLIENT_ID }}
   TF_VAR_github_client_secret: ${{ secrets.TF_VAR_GITHUB_CLIENT_SECRET }}
   TF_VAR_github_pat: ${{ secrets.TF_VAR_GITHUB_PAT }}
+  TF_VAR_github_discovery_target: ${{ secrets.TF_VAR_GITHUB_DISCOVERy_TARGET }}
 
 jobs:
   terraform:
