We consume the heroku backstage module as well

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -16,3 +16,4 @@ spec:
   lifecycle: development
   consumesApis:
     - terraform-grafana-oteldemostack
+    - terraform-heroku-oteldemostack-backstage
